[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Hwuiwon Kim <hwuiwon.kim@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.22"
uvicorn = "^0.26.0"
urllib3 = "<=2.0"
loguru = "^0.7.2"

[tool.poetry.group.dev.dependencies]
black = "^23.12.1"
ruff = "^0.1.13"
pylint = "^3.0.3"
pre-commit = "^3.6.0"
isort = "^5.13.2"

[tool.ruff]
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  "UP",  # pyupgrade
]
line-length = 100

[tool.ruff.pyupgrade]
# Preserve types, even if a file imports `from __future__ import annotations`.
keep-runtime-typing = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"